adicionei um novo paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,12 @@
 <body>
     <h1>Ola, mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum, consequatur et accusamus corporis repudiandae officiis qui nesciunt. Tempore velit ipsam, aspernatur ipsum, laudantium minima provident molestias deserunt, laboriosam eaque libero.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum, consequatur et accusamus corporis repudiandae officiis qui nesciunt.
+        Tempore velit ipsam, aspernatur ipsum, laudantium minima provident molestias deserunt, laboriosam eaque libero.
+    </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Sed facilis quia aperiam repellendus nobis? Debitis, recusandae odio!
+        Quis reprehenderit tempora, porro eveniet deserunt illo provident vitae sit aspernatur natus odit.
+    </p>
 </body>
 </html>
